--- a/XSS/csp/csptest.html
+++ b/XSS/csp/csptest.html
@@ -1,11 +1,11 @@
 <html>
 <h2 >CSP Test</h2>
-<p>Inline: Correct Nonce: <span id='area1'>Failed</span></p>
-<p>Inline: Wrong Nonce: <span id='area2'>Failed</span></p>
-<p>Inline: No Nonce: <span id='area3'>Failed</span></p>
-<p>From self: <span id='area4'>Failed</span></p>
-<p>From example68.com: <span id='area5'>Failed</span></p>
-<p>From example78.com: <span id='area6'>Failed</span></p>
+<p>1. Inline: Correct Nonce: <span id='area1'>Failed</span></p>
+<p>2. Inline: Wrong Nonce: <span id='area2'>Failed</span></p>
+<p>3. Inline: No Nonce: <span id='area3'>Failed</span></p>
+<p>4. From self: <span id='area4'>Failed</span></p>
+<p>5. From example68.com: <span id='area5'>Failed</span></p>
+<p>6. From example78.com: <span id='area6'>Failed</span></p>
 
 <script type="text/javascript" nonce="1rA2345">
 document.getElementById('area1').innerHTML = "OK";
